--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,6 @@
 NODE_ENV=production
-REACT_APP_BASE_URL=https://3.99.31.18:80
-API_URL=http://3.99.31.18:4000
+REACT_APP_BASE_URL=https://prod.sunshinelaundry.ca:80
+API_URL=http://prod.sunshinelaundry.ca:4000
 REACT_APP_AWS_REGION=ca-central-1
 REACT_APP_AWS_IOT_ENDPOINT=a2m5ep85nd5s4s-ats.iot.ca-central-1.amazonaws.com
 REACT_APP_AWS_COGNITO_IDENTITY_POOL_ID=ca-central-1:343aba64-1cb1-4384-99c0-55041f2cacbc
